ipasir/sat/cadical/build/configure.log
./configure-have-closefrom.cpp:5:3: error: use of undeclared identifier 'closefrom'
    5 |   closefrom (0);
      |   ^
1 error generated.
./configure-have-closefrom.cpp:5:3: error: use of undeclared identifier 'closefrom'
    5 |   closefrom (0);
      |   ^
1 error generated.
./configure-have-closefrom.cpp:5:3: error: use of undeclared identifier 'closefrom'
    5 |   closefrom (0);
      |   ^
1 error generated.
./configure-have-closefrom.cpp:5:3: error: use of undeclared identifier 'closefrom'
    5 |   closefrom (0);
      |   ^
1 error generated.
./configure-have-closefrom.cpp:5:3: error: use of undeclared identifier 'closefrom'
    5 |   closefrom (0);
      |   ^
1 error generated.
